feat: Update map functionality and user location handling for Bangladesh routes

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rain-route-refuge</title>
+    <title>জলজট</title>
     <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="team_ai_architect" />
 
-    <meta property="og:title" content="rain-route-refuge" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="জলজট" />
+    <meta property="og:description" content="জলজট" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
