--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>জলজট</title>
+    <link rel="icon" href="/favicon-32x32.png" type="image/x-icon"/>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="team_ai_architect" />
 
